--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@
   
   /* Mobile-first: Hero Section */
   .hero {
+    position: relative;
     height: 40vh;
     background-image: url('./assets/hero-img.png');
     background-repeat: no-repeat;
@@ -67,7 +68,7 @@
   .hero::before {
     content: '';
     position: absolute;
-    top: 8%;
+    top: 0;
     left: 0;
     width: 100vw;
     height: 40vh;
