--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
   header {
     background: #333;
     color: #fff;
-    padding: 1rem;
+    padding: 1em 1.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -130,7 +130,7 @@
   .products {
     
     width: 90vw;
-    margin: 0 auto;
+    margin: 2em auto 0.5em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -246,22 +246,6 @@
     border-radius: 8px;
   }
 
-  .feedback {
-    background-color: red;
-    display: grid;
-    grid-template-columns: 1em 1fr 1em;
-    grid-template-rows: auto;
-    row-gap: 1m;
-    grid-template-areas: 
-        ".... .... .... ."
-        ".... img1 ...."
-        ".... card1 ...."
-        ".... img2 ...."
-        ".... card2 ...."
-        ".... .... .... ."
-    ;
-  }
-
   .feedback h2 {
     color: #ff6600;
     text-align: center
@@ -269,33 +253,38 @@
 
   .feedback-grid {
     width: 100%;
-    background-color: yellowgreen
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    grid-auto-flow: dense;
+    grid-template-rows: auto;
+    gap: 0.8em;
+    padding: 0 0.5em;
+    grid-template-areas: 
+        ".... ...."
+        "img1 card1"
+        "img1 card1"
+        "card2 img2"
+        "card2 img2"
+        ".... .... "
   }
 
-  .contact-img {
-    height: 200px;
+  .contact-img img{
     width: 150px;
-    overflow: hidden;
-    border-radius: 0.5rem;
-  }
-
-  .contact-img img {
-    width: 100%;
-    object-position: center;
-    object-fit: contain;
-    border-radius: 0.5rem;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 0.5rem; 
   }
   
-  /* .feedback-grid {
-    display: grid;
-    grid-template-areas: 
-        ".... .... .... ....."
-        ".... img1 card1 ...."
-        ".... card2 img2 ...."
-        ".... .... .... ....."
-    ;
-    gap: 20px;
-  } */
+  .card-1, .card-2{
+    width: 150px;
+    height: 250px;
+    padding: 0.5em 0.2em;
+  }
+
+  .feedbacker {
+    font-weight: 600;
+    font-size: 0.8rem;
+  }
 
   .image-1 {
     grid-area: img1;
@@ -323,12 +312,21 @@
   
   /* Mobile-first: Contact Section */
   .contact {
+    margin: 2rem 0 1rem;
     padding: 1rem;
     text-align: center;
   }
+
+  .contact h2 {
+    color: #ff6600;
+  }
+
+  .contact-info {
+    margin-bottom: 1rem;
+  }
   
   #map iframe {
-    width: 100%;
+    width: 90vw;
     height: 200px;
     border: none;
   }
@@ -341,15 +339,9 @@
     padding: 1rem;
   }
   
-  footer ul {
-    list-style: none;
+  .footer-content {
     display: flex;
-    justify-content: center;
-    gap: 1rem;
-  }
-  
-  footer ul li a {
-    color: white;
+    flex-direction: column;
   }
   
 
