--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
   
   /* Mobile-first: Header */
   header {
+    position: relative;
     background: #333;
     color: #fff;
     padding: 1em 1.5em;
@@ -39,20 +40,46 @@
     width: 50px;
   }
   
-  header nav ul {
+  nav ul {
     list-style: none;
-    display: none; /* Hidden by default for mobile */
-    flex-direction: column;
-  }
-  
-  header #menu-icon {
-    font-size: 1.5rem;
-    cursor: pointer;
-  }
-  
-  header nav.active ul {
     display: flex;
   }
+
+  .hidden {
+      display: none;
+  }
+
+  .bars-open, .bars-closed {
+      cursor: pointer;
+      font-size: 1.5rem;
+  }
+
+  .menu-list {
+    display: none;
+    position: absolute;
+    background-color: #3b1402e8;
+    color: #ff6600;
+    font-weight: 600;
+    padding: 0.5em;
+    border-top-left-radius: 0.2em;
+    border-bottom-left-radius: 0.2em;
+    z-index: 4;
+    right: 0.9em;
+    top: 4.65em;
+}
+
+.menu-list li {
+    margin-bottom: 0.5rem;
+}
+
+.menu-list li:hover, .menu-list li:focus {
+    text-decoration: underline;
+}
+
+.menu-list.show {
+    display: flex;
+    flex-direction: column;
+}
   
   /* Mobile-first: Hero Section */
   .hero {
