--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,16 @@
     z-index: 4;
     right: -0.5em;
     top: 4.65em;
-}
+
+    transform: translateX(100%);
+    transition: transform 4s ease-out, opacity 4s ease-out;
+  }
+
+  .menu-list.show {
+    display: block;
+    opacity: 1;
+    transform: translateX(0);
+  }
 
 .menu-list li {
     margin-bottom: 0.5rem;
@@ -86,7 +95,7 @@
   .hero {
     position: relative;
     height: 50vh;
-    background-image: url('./assets/hero-img.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('./assets/hero-img.png') center/cover no-repeat;
     background-repeat: no-repeat;
     background-position: center;
     display: flex;;
@@ -94,17 +103,6 @@
     justify-content: flex-end;
     padding: 0 0 2rem 1em;
     color: white;
-  }
-
-  .hero::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 50vh;
-    background: rgba(36, 0, 0, 0.349); /* Semi-transparent black layer */
-    z-index: 1; /* Ensures the overlay stays above the background but below the text */
   }
   
   .hero .hero-content {
@@ -137,6 +135,8 @@
 
   .hero .btn:hover, .hero .btn:focus {
     background: #8d3902;
+    transform: scale(1.05);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   }
 
 
@@ -418,4 +418,12 @@
       gap: 2rem;
     }
   }
+
+
+  @media (min-width: 900px) {
+    .feedback-grid {
+      grid-template-columns: repeat(2, 1fr); /* 2 columns on larger screens */
+    }
+  }
+  
   
