--- a/styles.css
+++ b/styles.css
@@ -186,11 +186,28 @@
   .product-card {
     background-color: gainsboro;
     position: relative;
-    width: 90%;
-    min-height: 25rem;
-    margin: 0 auto;
-    border-radius: 1rem;
+    display: flex;
+    width: 90vw;
+    max-width: 30rem;
+    flex-direction: column;
     overflow: hidden;
+    border-radius: 0.3rem;
+    box-shadow: 0px 2px 4px #0e0e0e;
+    max-height: 25em;
+  }
+
+  .card-image {
+    position: relative;
+    border-radius: 0.3rem;
+    overflow: hidden;
+    display: flex;
+    min-height: 16em;
+  }
+
+  .product-image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
 
   .product-card-label {
@@ -204,27 +221,29 @@
     border-radius: 0.5em;
   }
   
-  .img-container {
-    max-height: 18rem;
-    margin-bottom: 0.5rem;
-    overflow: hidden;
-    border-bottom-right-radius: 1em;
-    border-bottom-left-radius: 1em;
+  .product-details {
+    margin: 0.5em 0 0;
+    padding: 0 1em 0.5em;
+    font-size: 0.85rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  
-  .img-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: calc(50%) calc(50% - 120px);
-  }
-  
-  .product-card h4, .product-card p, .product-card .btn {
-    margin: 0 1rem;
+
+  .rate-card {
+    display: flex;
+    color: #ff6600;
+    width: 9em;
+    gap: 0.3em;
+    font-weight: 800;
   }
   
   .product-card .btn {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin: 0.5em 1em;
     background-color: #ff6600;
     color: white;
     padding: 0.5rem 1rem;
