--- a/styles.css
+++ b/styles.css
@@ -58,18 +58,18 @@
     display: none;
     position: absolute;
     width: 8rem;
-    background-color: #3b1402e8;
-    color: #ff6600;
+    background-color: #fa802fd0;
+    color: #fff;
     font-weight: 600;
     padding: 0.5em;
     border-top-left-radius: 0.2em;
     border-bottom-left-radius: 0.2em;
     z-index: 4;
     right: -0.5em;
-    top: 4.65em;
+    top: 5.5em;
 
     transform: translateX(100%);
-    transition: transform 4s ease-out, opacity 4s ease-out;
+    transition: transform 10s ease-out, opacity 10s ease-out;
   }
 
   .menu-list.show {
