--- a/styles.css
+++ b/styles.css
@@ -663,4 +663,68 @@
       font-size: 1.5rem;
     }
   }
+
+
+ @media (min-width: 900px) {
+  body{
+    width: 90vw;
+    margin: 0 auto;
+  }
+
+  .container {
+    width: 90vw;
+  }
+
+  header .logo img {
+    width: 120px;
+  }
+
+  header nav {
+    width: 50vw;
+    justify-content: space-between;
+    margin-right: 2rem;
+  }
+
+
+  .hero {
+    height: 70vh;
+  }
+
+  .hero-content {
+    max-width: 90vw;
+    justify-content: flex-start;
+  }
+
+  .hero-content h1 {
+    max-width: 80vw;
+    font-size: 2.2rem;
+    line-height: 1.4;
+  }
+
+  .products h3 {
+    margin:1rem 0;
+  }
+
+  .product-grid {
+    grid-template-columns: repeat(12, 1fr);
+    padding: 2rem 1rem;
+    overflow: hidden;
+  }
+
+  .product-card {
+    max-width: 18rem;
+    font-size: 1em;
+  }
+
+  .product-card p {
+    font-size: 0.7rem;
+  }
+
+ }
+
+
+
+ @media (min-width: 1050px) {
+
+ }
   
